--- a/src/style.module.css
+++ b/src/style.module.css
@@ -3,19 +3,17 @@
     flex-direction: column;
     height: 100vh;
     padding: 25px;
+    background-color: black;
 }
 
 .header{
     flex:1;
-    background-color: red;
 }
 
 .tv_show_detail{
     flex:2;
-    background-color: blue;
 }
 
 .recommentations{
     flex: 1;
-    background-color: green;
 }
