--- a/src/style.module.css
+++ b/src/style.module.css
@@ -7,13 +7,13 @@
 }
 
 .header{
-    flex:1;
-}
-
-.tv_show_detail{
     flex:2;
 }
 
-.recommentations{
-    flex: 1;
+.tv_show_details{
+    flex:4;
+}
+
+.recommended_shows{
+    flex: 2;
 }
